# scryglass

./: BUILD.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  THIRD-PARTY.md  build.rs  deny.toml
.github/vcpkg-triplets/: arm64-osx.cmake  x64-osx.cmake
.github/workflows/: ci.yml  publish.yml  release.yml  shader.yml  tag-version.yml
packaging/windows/: scryglass.iss
shaders/yuv/: Cargo.toml
shaders/yuv/src/: lib.rs
src/: allocation.rs  anim.rs  app.rs  cache.rs  config.rs  gif.rs  gpu_keepalive.rs  main.rs  nav.rs  platform.rs  update_check.rs  video.rs  video_stub.rs  viewer.rs
src/app/: boot.rs  message.rs  mod.rs  shortcuts.rs  state.rs  subscription.rs  test_support.rs  update.rs  view.rs  viewer_math.rs
src/app/update/: file_ops.rs  media.rs  media_tasks.rs  mod.rs  navigation.rs  open.rs  settings.rs  video_flow.rs  window.rs
src/app/view/: content.rs  mod.rs  overlays.rs
src/components/: mod.rs
src/components/context_menu/: mod.rs  widget.rs
src/components/filmstrip/: mod.rs  widget.rs
src/components/footer/: mod.rs  view.rs
src/components/help/: mod.rs  view.rs
src/components/info_panel/: mod.rs  view.rs
src/components/modal/: mod.rs  widget.rs
src/components/nav_slider/: mod.rs  widget.rs
src/components/settings/: mod.rs  widget.rs
src/components/toasts/: mod.rs
src/components/toolbar/: mod.rs  widget.rs
src/components/video_controls/: mod.rs  widget.rs
src/components/viewer/: mod.rs  view.rs
src/components/zoom_slider/: mod.rs
src/media/: animation.rs  archive.rs  cache.rs  disk_thumbs.rs  disk_thumbs_stub.rs  info.rs  mod.rs  pipeline.rs  registry.rs  thumbs.rs
src/media/decoders/: avif.rs  heif.rs  image_rs.rs  jxl.rs  mod.rs  raw.rs  svg.rs
src/ui/: checkerboard.rs  context_menu.rs  dialogs.rs  filmstrip.rs  footer.rs  help.rs  icons.rs  image_display.rs  mod.rs  nav_slider.rs  settings.rs  shortcuts.rs  spinner.rs  theme.rs  toast.rs  toolbar.rs  video_controls.rs  video_surface.rs
src/ui/video_surface/: geometry.rs  mod.rs  pipeline.rs  program.rs  yuv.spv
src/video/: audio.rs  decode.rs  frame.rs  hw.rs  mod.rs  session.rs
src/widgets/: context_menu.rs  filmstrip.rs  footer.rs  image_display.rs  mod.rs  toolbar.rs
xtask/: Cargo.toml
xtask/src/: main.rs
xtask/src/package/: archive.rs  bundle.rs  desktop.rs  linux.rs  macos.rs  mod.rs  windows.rs
