[package]
name = "scryglass"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.14", features = ["image", "tokio", "canvas"] }
anyhow = "1"
thiserror = "2"
gif = "0.14"
rfd = "0.15"
open = "5"
arboard = "3"
iced_fonts = { version = "0.3", features = ["bootstrap"] }
natord = "1.0.9"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
dirs = "6.0.0"
tokio = { version = "1.52.3", features = ["fs", "io-util", "macros", "rt", "sync", "time"] }
image = "0.25.10"
kamadak-exif = "0.6.1"
zip = "8.6.0"
tar = "0.4.46"
flate2 = "1.1.9"
sevenz-rust2 = "0.21.0"
unrar = { version = "0.5.8", optional = true }
jxl-oxide = { version = "0.12.6", optional = true }
resvg = { version = "0.47.0", default-features = false, features = ["text"], optional = true }
rawler = { version = "0.7.2", optional = true }
libheif-rs = { version = "2.7.0", optional = true }
trash = "5.2.6"
ffmpeg-sidecar = { version = "2.5.2", optional = true }
rodio = { version = "0.20", default-features = false, optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_UI_Shell", "Win32_Foundation", "Win32_System_Com", "Win32_System_Ole", "Win32_System_Registry"] }

[dev-dependencies]
tempfile = "3"
zune-core = "0.5.1"
zune-jpegxl = "0.5.2"

[features]
# RAR support builds the vendored unrar C++ sources. On by default,
# disable with --no-default-features if the toolchain can't build it.
default = ["rar", "disk-thumbs", "jxl", "svg", "raw"]
rar = ["dep:unrar"]
# Persistent thumbnail cache on disk (privacy-conscious: reconciled
# against deleted files on folder open, 90-day expiry, size-capped).
# Also gated at runtime by the `disk_thumbs` config setting.
disk-thumbs = []
# Pure-Rust format decoders, on by default.
jxl = ["dep:jxl-oxide"]
svg = ["dep:resvg"]
raw = ["dep:rawler"]
# HEIC/HEIF needs the system libheif C library, so it's opt-in.
heif = ["dep:libheif-rs"]
# Video playback via a spawned ffmpeg binary (no C linkage). Needs
# ffmpeg on PATH at runtime. Opt-in.
video = ["dep:ffmpeg-sidecar", "dep:rodio"]
