[package]
name = "scryglass"
version = "0.1.0"
edition = "2024"
description = "A lightweight, blazing-fast image viewer"
license = "MIT"
repository = "https://github.com/cameronkinsella/scryglass"
readme = "README.md"
keywords = ["image", "viewer", "photo", "gui", "iced"]
categories = ["multimedia::images", "gui"]
exclude = ["/.github", "/shaders", "/xtask", "/packaging"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }.tar.gz"
pkg-fmt = "tgz"
bin-dir = "{ name }-v{ version }-{ target }/{ bin }{ binary-ext }"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }.zip"
pkg-fmt = "zip"
bin-dir = "{ name }-v{ version }-{ target }/{ bin }{ binary-ext }"

[workspace]
members = ["xtask"]
default-members = ["."]
# Built by cargo-gpu on a pinned nightly, not the app.
exclude = ["shaders/yuv"]

[dependencies]
# image-without-codecs: the media pipeline owns all decoding and hands
# iced raw RGBA handles, so iced's own codec features stay off. The
# runtime crate is a direct dependency because the facade hides the
# allocate API behind its full image feature.
iced = { version = "0.14", features = ["image-without-codecs", "tokio", "canvas", "wgpu"] }
iced_runtime = "0.14"
anyhow = "1"
thiserror = "2"
gif = "0.14"
rfd = "0.17"
open = "5"
arboard = "3"
iced_fonts = { version = "0.3", features = ["bootstrap"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
dirs = "6.0.0"
tokio = { version = "1.52.3", features = ["fs", "io-util", "macros", "rt", "sync", "time"] }
# Trimmed feature set: the decoders the registry claims plus qoi, the
# disk thumbnail codec. The default set would add AV1/AVIF encoding via
# rav1e, which nothing here uses.
image = { version = "0.25.10", default-features = false, features = [
    "png",
    "jpeg",
    "gif",
    "bmp",
    "webp",
    "tiff",
    "ico",
    "qoi",
    "rayon",
] }
kamadak-exif = "0.6.1"
zip = "8.6.0"
tar = "0.4.46"
flate2 = "1.1.9"
sevenz-rust2 = "0.21.0"
# The maintained fork of unrar.rs, aliased so call sites stay `unrar::`.
unrar = { package = "unrar-ng", version = "0.7.7", optional = true }
jxl-oxide = { version = "0.12.6", optional = true }
resvg = { version = "0.47.0", default-features = false, features = ["text"], optional = true }
rawler = { version = "0.7.2", optional = true }
# v1_17 API level: oldest supported libheif, so the same code builds
# against Ubuntu's packaged 1.17 and vcpkg's current release alike.
libheif-rs = { version = "2.7.0", default-features = false, features = ["v1_17"], optional = true }
trash = "5.2.6"
rodio = { version = "0.22", default-features = false, features = ["playback"], optional = true }
ffmpeg-next = { version = "8", default-features = false, features = ["codec", "format", "software-resampling", "software-scaling"], optional = true }
# Enable wgpu's SPIR-V frontend.
wgpu = { version = "27", features = ["spirv"], optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_UI_Shell", "Win32_Foundation", "Win32_System_Com", "Win32_System_Console", "Win32_System_Ole", "Win32_System_Registry"] }
winreg = "0.56"

[target.'cfg(not(windows))'.dependencies]
# Name-sort fallback where StrCmpLogicalW isn't available.
natord = "1.0.9"

[target.'cfg(windows)'.build-dependencies]
# Embeds the icon and version info into the exe.
winresource = "0.1"

[dev-dependencies]
iced_test = "0.14"
tempfile = "3"
zune-core = "0.5.1"
zune-jpegxl = "0.5.2"

[features]
# RAR support builds the vendored unrar C++ sources. On by default,
# disable with --no-default-features if the toolchain can't build it.
default = ["rar", "disk-thumbs", "jxl", "svg", "raw"]
rar = ["dep:unrar"]
# Persistent thumbnail cache on disk (privacy-conscious: reconciled
# against deleted files on folder open, 90-day expiry, size-capped).
# Also gated at runtime by the `disk_thumbs` config setting.
disk-thumbs = []
# Pure-Rust format decoders, on by default.
jxl = ["dep:jxl-oxide"]
svg = ["dep:resvg"]
raw = ["dep:rawler"]
# HEIC/HEIF needs the system libheif C library, so it's opt-in.
heif = ["dep:libheif-rs"]
# Video playback via FFmpeg's libraries (in-process decode). Building
# needs an FFmpeg dev package (FFMPEG_DIR) and libclang. With shared
# libraries the FFmpeg DLLs must be beside the exe at runtime. Opt-in.
video = ["dep:ffmpeg-next", "dep:rodio", "dep:wgpu"]
# Fully self-contained executable: links FFmpeg statically. Point
# FFMPEG_DIR at a static build (e.g. vcpkg's x64-windows-static-md);
# build.rs rejects shared builds to prevent silently DLL-dependent
# binaries. See README for the licensing note (LGPL relink terms).
video-static = ["video", "ffmpeg-next/static"]
